Fix firefox scrollbar

--- a/src/components/Markdown/markdown.module.css
+++ b/src/components/Markdown/markdown.module.css
@@ -37,6 +37,8 @@
 .md pre {
   border-radius: 8px;
   margin: 10px 0;
+  scrollbar-width: thin;
+  scrollbar-color: var(--light-op) transparent;
 }
 
 .md pre::-webkit-scrollbar {
